@@ -1,8 +1,12 @@
 package com.example.cult_of_tim.cultoftim.service.impl;
 
-import com.example.cult_of_tim.cultoftim.models.Book;
-import com.example.cult_of_tim.cultoftim.models.Promotion;
-import com.example.cult_of_tim.cultoftim.models.PromotionDiscount;
+import com.example.cult_of_tim.cultoftim.converter.PromotionConverter;
+import com.example.cult_of_tim.cultoftim.converter.PromotionDiscountConverter;
+import com.example.cult_of_tim.cultoftim.dto.PromotionDiscountDto;
+import com.example.cult_of_tim.cultoftim.dto.PromotionDto;
+import com.example.cult_of_tim.cultoftim.entity.Book;
+import com.example.cult_of_tim.cultoftim.entity.Promotion;
+import com.example.cult_of_tim.cultoftim.entity.PromotionDiscount;
 import com.example.cult_of_tim.cultoftim.repositories.BookRepository;
 import com.example.cult_of_tim.cultoftim.repositories.PromotionRepository;
 import com.example.cult_of_tim.cultoftim.service.PromotionService;
@@ -13,28 +17,35 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class PromotionServiceImpl implements PromotionService {
     private final PromotionRepository promotionRepository;
     private final BookRepository bookRepository;
+    private final PromotionConverter promotionConverter;
+    private final PromotionDiscountConverter promotionDiscountConverter;
 
     @Autowired
-    public PromotionServiceImpl(PromotionRepository promotionRepository, BookRepository bookRepository) {
+    public PromotionServiceImpl(PromotionRepository promotionRepository, BookRepository bookRepository, PromotionConverter promotionConverter, PromotionDiscountConverter promotionDiscountConverter) {
         this.promotionRepository = promotionRepository;
         this.bookRepository = bookRepository;
+        this.promotionConverter = promotionConverter;
+        this.promotionDiscountConverter = promotionDiscountConverter;
     }
 
     @Override
-    public Optional<Promotion> getPromotionById(Long id) {
-        return promotionRepository.findById(id);
+    public Optional<PromotionDto> getPromotionById(Long id) {
+        return promotionRepository.findById(id).map(promotionConverter::toDto);
     }
 
     @Override
-    public List<Promotion> getAllPromotions() {
-        return promotionRepository.findAll();
+    public List<PromotionDto> getAllPromotions() {
+        List<Promotion> promotions = promotionRepository.findAll();
+        return promotions.stream()
+                .map(promotionConverter::toDto)
+                .collect(Collectors.toList());
     }
-
 
     @Override
     public boolean isGlobal(Long promotionID) {
@@ -42,14 +53,24 @@ public class PromotionServiceImpl implements PromotionService {
     }
 
     @Override
-    public Promotion createPromotion(Promotion promotion) {
-        return promotionRepository.save(promotion);
+    public PromotionDto createPromotion(PromotionDto promotionDto) {
+        Promotion newPromotion = promotionConverter.toEntity(promotionDto);
+        return promotionConverter.toDto(promotionRepository.save(newPromotion));
     }
 
     @Override
-    public Promotion updatePromotion(Long id, Promotion updatedPromotion) {
+    public PromotionDto updatePromotion(Long id, PromotionDto updatedPromotionDto) {
+        Promotion existingPromotion = promotionRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Promotion not found"));
+
+        Promotion updatedPromotion = promotionConverter.toEntity(updatedPromotionDto);
         updatedPromotion.setId(id);
-        return promotionRepository.save(updatedPromotion);
+
+        existingPromotion.setDescription(updatedPromotion.getDescription());
+        existingPromotion.setStartDate(updatedPromotion.getStartDate());
+        existingPromotion.setEndDate(updatedPromotion.getEndDate());
+
+        return promotionConverter.toDto(promotionRepository.save(existingPromotion));
     }
 
     @Override
@@ -68,19 +89,21 @@ public class PromotionServiceImpl implements PromotionService {
     }
 
     @Override
-    public List<Promotion> getActivePromotions() {
+    public List<PromotionDto> getActivePromotions() {
         LocalDateTime now = LocalDateTime.now();
         return promotionRepository.findAll().stream()
                 .filter(promotion -> promotion.getStartDate().isBefore(now) && promotion.getEndDate().isAfter(now))
-                .toList();
+                .map(promotionConverter::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Promotion> getExpiredPromotions() {
+    public List<PromotionDto> getExpiredPromotions() {
         LocalDateTime now = LocalDateTime.now();
         return promotionRepository.findAll().stream()
                 .filter(promotion -> promotion.getEndDate().isBefore(now))
-                .toList();
+                .map(promotionConverter::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -102,21 +125,21 @@ public class PromotionServiceImpl implements PromotionService {
 
     @Override
     @Transactional
-    public Promotion addBookWithDiscountToPromotion(Long promotionId, Long bookId, int discountPercentage) {
-        Promotion promotion = promotionRepository.findById(promotionId)
+    public void addBookWithDiscountToPromotion(PromotionDiscountDto discountDto) {
+        Promotion promotion = promotionRepository.findById(discountDto.getPromotionId())
                 .orElseThrow(() -> new IllegalArgumentException("Promotion not found"));
 
-        Book book = bookRepository.findById(bookId)
+        Book book = bookRepository.findById(discountDto.getBookId())
                 .orElseThrow(() -> new IllegalArgumentException("Book not found"));
 
         boolean promotionDiscountExists = promotion.getDiscounts().stream()
-                .anyMatch(pd -> pd.getBook().getId().equals(bookId));
+                .anyMatch(pd -> pd.getBook().getId().equals(discountDto.getBookId()));
 
         if (!promotionDiscountExists) {
             PromotionDiscount promotionDiscount = new PromotionDiscount();
             promotionDiscount.setPromotion(promotion);
             promotionDiscount.setBook(book);
-            promotionDiscount.setDiscountPercentage(discountPercentage);
+            promotionDiscount.setDiscountPercentage(discountDto.getDiscountPercentage());
 
             if (promotion.getDiscounts() == null) {
                 promotion.setDiscounts(List.of(promotionDiscount));
@@ -124,9 +147,9 @@ public class PromotionServiceImpl implements PromotionService {
                 promotion.getDiscounts().add(promotionDiscount);
             }
 
-            return promotionRepository.save(promotion);
+            promotionRepository.save(promotion);
         } else {
-            throw new IllegalArgumentException("Promotion discount for the Book with id: " + bookId + " is already created");
+            throw new IllegalArgumentException("Promotion discount for the Book with id: " + discountDto.getBookId() + " is already created");
         }
     }
 }
